feat udistrita/arka_cliente#844: Bajas
- Controlador que retorna el historial de un elemento (queda pendiente la depreciacion)
